--- a/index.html
+++ b/index.html
@@ -1,7 +1,28 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello! This is me Anurag Bhattacharyya. Welcome to my website </h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+	<head>
+		<title>Anurag Bhattacharyya, PhD Candidate</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hello! I am Anurag, welcome to my website/h1>
+				<p>I am interested in Topology Optimization. <a href="/about">Read more about me</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:bhttchr6@illinois.edu">email</a></li>
+        		<li><a href="https://github.com/bhttchr6">github.com/bhttchr6</a></li>
+			</ul>
+		</footer>
+	</body>
 </html>
