--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hello! I am Anurag, welcome to my website/h1>
+        		<h1>Hello! I am Anurag, welcome to my website</h1>
 				<p>I am interested in Topology Optimization. <a href="/about">Read more about me</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
