--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Anurag Bhattacharyya, PhD Candidate</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css"
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hello! I am Anurag, welcome to my website</h1>
-				<p>I am interested in Topology Optimization. <a href="/about">Read more about me</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:bhttchr6@illinois.edu">email</a></li>
-        		<li><a href="https://github.com/bhttchr6">github.com/bhttchr6</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Anurag Bhatatcharyya, PhD Candidate
+---
+<div class="blurb">
+	<h1>Hello! I am Anurag </h1>
+	<p>I am interested in Topology Optimization <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
