--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Anurag Bhatatcharyya, PhD Candidate
 ---
 <div class="blurb">
-	<h1>Hello! I am Anurag </h1>
-	<p>I am interested in Topology Optimization <a href="/about">Read more about my life...</a></p>
+	<h1>Hello! I am Anurag Bhatatcharyya</h1>
+	<p>I am a PhD candidate at the University of Illinois Urbana-Champaign. I am interested in computational mechnaics focussed on topology optimization <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
