--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Anurag Bhatatcharyya, PhD Candidate
 ---
 <div class="blurb">
 	<h1>Hello! I am Anurag Bhattacharyya</h1>
-	<p>I am a PhD candidate at the University of Illinois Urbana-Champaign. I am interested in computational mechnaics focussed on topology optimization <a href="/about">Read more about my life...</a></p>
+	<p>I am a PhD candidate at the University of Illinois Urbana-Champaign. I am interested in computational mechnaics focussed on topology optimization <a href="CV_AnuragB.pdf">Read more about my life...</a></p>
 </div><!-- /.blurb -->
