--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 title: Anurag Bhatatcharyya, PhD Candidate
 ---
 <div class="blurb">
+	<img src="images/Astronomy.jpg" style="width:280px; height:280px; object-fit: cover;">
 	<h1>Hello! I am Anurag Bhattacharyya</h1>
 	<p>I am a PhD candidate at the University of Illinois Urbana-Champaign. I am interested in computational mechnaics focussed on topology optimization <a href="CV_AnuragB.pdf">Read more about my life...</a></p>
 </div><!-- /.blurb -->
