--- a/index.html
+++ b/index.html
@@ -7,3 +7,30 @@ title: Anurag Bhatatcharyya, PhD Candidate
 	<h1>Hello! I am Anurag Bhattacharyya</h1>
 	<p>I am a PhD candidate at the University of Illinois Urbana-Champaign. I am interested in computational mechnaics focussed on topology optimization <a href="CV_AnuragB.pdf">Read more about my life...</a></p>
 </div><!-- /.blurb -->
+<nav>
+							<!-- This element makes an "Unordered List" -->
+							<ul>
+								<!-- This is a "List Item" -->
+								<li>
+									<!-- 	Note that this links to #about, which will move the page to wherever
+										the element with the id "about" exists.
+									-->
+									<a href="#about">About Me</a>
+								</li>
+								<li>
+									<a href="#research">Research</a>
+								</li>
+								<li>
+									<a href="#community">Community</a>
+								</li>
+								<li>
+									<a href="#contact">Contact</a>
+								</li>
+								<!-- 	You can add another button to your navigation menu by adding
+									another List Item with a link inside of it.
+								-->
+								<!-- <li>
+									<a href="images/Astronomy.jpg">My CV</a>
+								</li> -->
+							</ul>
+						</nav>
