--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Anurag Bhatatcharyya, PhD Candidate
 <div class="blurb">
 	<img src="Bhattacharyya.asp.jpg" style="width:280px; height:280px; object-fit: cover;">
 	<h1>Hello! I am Anurag Bhattacharyya</h1>
-	<p>I am a PhD candidate at the University of Illinois Urbana-Champaign. I am interested in computational mechnaics focussed on topology optimization <a href="CV_AnuragB.pdf">Read more about my life...</a></p>
+	<p>I am a PhD candidate at the University of Illinois Urbana-Champaign. I am interested in computational mechanics focussed on topology optimization <a href="CV_AnuragB.pdf">Here is my CV</a></p>
 </div><!-- /.blurb -->
 <nav>
 							<!-- This element makes an "Unordered List" -->
