--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Anurag Bhatatcharyya, PhD Candidate
 									<a href="#research">Research</a>
 								</li>
 								<li>
-									<a href="#community">Community</a>
+									<a href="_posts/2020-05-04-Anurag-Bhattacharyya-site-launched.md">Community</a>
 								</li>
 								<li>
 									<a href="#contact">Contact</a>
