--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ title: Anurag Bhatatcharyya, PhD Candidate
 								<!-- 	You can add another button to your navigation menu by adding
 									another List Item with a link inside of it.
 								-->
+								<li><a href="/blog">Blog</a></li>
 								<!-- <li>
 									<a href="images/Astronomy.jpg">My CV</a>
 								</li> -->
