--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: Anurag Bhatatcharyya, PhD Candidate
 									<a href="#about">About Me</a>
 								</li>
 								<li>
-									<a href="#research">Research</a>
+									<a href="https://scholar.google.com/citations?user=bCATqIIAAAAJ&hl=en">Research</a>
 								</li>
 								<li>
 									<a href="_posts/2020-05-04-Anurag-Bhattacharyya-site-launched.md">Community</a>
