--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Anurag Bhatatcharyya, PhD Candidate
 									<!-- 	Note that this links to #about, which will move the page to wherever
 										the element with the id "about" exists.
 									-->
-									<a href="#about">About Me</a>
+									<a href="https://publish.illinois.edu/designlab/">About Me</a>
 								</li>
 								<li>
 									<a href="https://scholar.google.com/citations?user=bCATqIIAAAAJ&hl=en">Research</a>
