--- a/index_rev.html
+++ b/index_rev.html
@@ -2,19 +2,19 @@
 <html>
 
 <head>
-  <title>Brown Bears</title>
+  <title>Anurag's Webpage</title>
 </head>
 
 <body>
   <nav>
-    <a href="./index.html">Brown Bear</a>
+    <a href="./index.html">Hello</a>
     <a href="./aboutme.html">About Me</a>
   </nav>
-  <h1>The Brown Bear</h1>
+  <h1>Topology Optimization</h1>
   <nav>
     <ul>
       <li><a href="#introduction">Introduction</a></li>
-      <li><a href="#habitat">Habitat</a></li>
+      <li><a href="#habitat">SOA</a></li>
       <li><a href="#media">Media</a></li>
     </ul>
   </nav>
