--- a/index_rev.html
+++ b/index_rev.html
@@ -9,8 +9,9 @@
   <nav>
     <a href="./index.html">Hello</a>
     <a href="./aboutme.html">About Me</a>
+    <a href="./projects.html"> Projects </a>
   </nav>
-  <h1>Topology Optimization</h1>
+  <h1>Future of Design</h1>
   <nav>
     <ul>
       <li><a href="#introduction">Introduction</a></li>
