--- a/aboutme_2.html
+++ b/aboutme_2.html
@@ -12,7 +12,7 @@
   </nav>
 
 <h1>About Me</h1>
-<h3>Michael Doliner</h3>
+<h3>Anurag Bhattacharyya</h3>
 <img src="https://content.codecademy.com/courses/web-101/htmlcss1-img_brown-bear-2.jpeg">
 
   <!-- A section that describes the brown bear -->
