--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <h1>Future of Design</h1>
   <nav>
     <ul>
-      <li><a href="#What is design?">What is design</a></li>
-      <li><a href="#Why design matters">Why design matters</a></li>
-      <li><a href="#How to design">How to design</a></li>
+      <li><a href="#What is design?">What is design?</a></li>
+      <li><a href="#Why design matters">Why design matters?</a></li>
+      <li><a href="#How to design">How to design?</a></li>
     </ul>
   </nav>
   <div id="What is design">
