--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <nav>
-    <a href="./index.htl">The future of design</a>
+    <a href="./index.html">Future of Design</a>
     <!-- web browsers respond to index.html and / the same way -->
     <a href="./aboutme.html">About Me</a>
   </nav>
