--- a/aboutme.html
+++ b/aboutme.html
@@ -11,9 +11,15 @@
     <a href="./aboutme.html">About Me</a>
   </nav>
 
-<h1>About Me</h1>
-<h3>Anurag Bhattacharyya</h3>
-
-  <p> </p>
+  <p> Currently, I am a research scientist at Palo Alto Research Center(a part ofSRI International)
+<br>
+    My research interests are:
+    <ul>
+      <li> <em> Topology Optimization:</em> Multifunctional mechanism design, soft robotics, multi-physics design optimization, dynamic response.
+      <li> <em> Materials by design:</em> Metamaterial design, biomimetic structures, inverse design
+      <li> <em>Design methods:</em> model-order reduction, adjoint-free methods, machine learning driven structural design, structural design under uncertainty.
+<li> Computational fabrication: 4D printing
+  </ul>
+      </p>
 </body>
 </html>
