--- a/aboutme.html
+++ b/aboutme.html
@@ -18,7 +18,7 @@
       <li> <em> Topology Optimization:</em> Multifunctional mechanism design, soft robotics, multi-physics design optimization, dynamic response.
       <li> <em> Materials by design:</em> Metamaterial design, biomimetic structures, inverse design
       <li> <em>Design methods:</em> model-order reduction, adjoint-free methods, machine learning driven structural design, structural design under uncertainty.
-<li> Computational fabrication: 4D printing
+      <li><em> Computational fabrication:</em> 4D printing
   </ul>
       </p>
 </body>
