--- a/aboutme.html
+++ b/aboutme.html
@@ -11,7 +11,7 @@
     <a href="./aboutme.html">About Me</a>
   </nav>
 
-  <p> Currently, I am a research scientist at Palo Alto Research Center(a part ofSRI International)
+  <p> Currently, I am a research scientist at Palo Alto Research Center(a part ofSRI International). My research interests intersect computational mechanics and structural optimization.
 <br>
     My research interests are:
     <ul>
