--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <nav>
-    <a href="./index.html">Design</a>
+    <a href="./index.html">Future of Design</a>
     <a href="./aboutme.html">About Me</a>
     <a href="./projects.html"> Projects </a>
   </nav>
