--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@
       <li><a href="#How to design">How to design?</a></li>
     </ul>
   </nav>
-  <div id="What is design">
+  <div id="What is design?">
     <h2>What is design</h2>
   </div>
-  <div id="Why design matters">
+  <div id="Why design matters?">
     <h2>Why design matters</h2>
+    <p> Design influences the way humans interact with the envinronment. A phone with smooth and rounded
+      corners is much for comfortable to carry in our pockets than a phone with sharp corners.
+    </p>
   </div>
-  <div id="How to design">
+  <div id="How to design?">
     <h2>How to design</h2>
   
   </div>
