--- a/aboutme.html
+++ b/aboutme.html
@@ -16,10 +16,10 @@
 <br>
     My research interests are:
     <ul>
-      <li> <em> Topology Optimization:</em> Multifunctional mechanism design, soft robotics, multi-physics design optimization, dynamic response.
-      <li> <em> Materials by design:</em> Metamaterial design, biomimetic structures, inverse design
-      <li> <em>Design methods:</em> model-order reduction, adjoint-free methods, machine learning driven structural design, structural design under uncertainty.
-      <li><em> Computational fabrication:</em> 4D printing
+      <li> <em> Topology Optimization:</em> Multifunctional mechanism design, soft robotics, multi-physics design optimization, dynamic response.</li>
+      <li> <em> Materials by design:</em> Metamaterial design, biomimetic structures, inverse design </li>
+      <li> <em>Design methods:</em> model-order reduction, adjoint-free methods, machine learning driven structural design, structural design under uncertainty.</li>
+      <li><em> Computational fabrication:</em> 4D printing</li>
   </ul>
       </p>
 </body>
