--- a/aboutme.html
+++ b/aboutme.html
@@ -13,14 +13,15 @@
   </nav>
 
   <p> Currently, I am a research scientist at Palo Alto Research Center(a part ofSRI International). My research interests intersect computational mechanics and structural optimization.
-<br>
-    My research interests are:
+  </p>
+    <br>
+  <p>My research interests are:</p>
     <ul>
       <li> <em> Topology Optimization:</em> Multifunctional mechanism design, soft robotics, multi-physics design optimization, dynamic response.</li>
       <li> <em> Materials by design:</em> Metamaterial design, biomimetic structures, inverse design </li>
       <li> <em>Design methods:</em> model-order reduction, adjoint-free methods, machine learning driven structural design, structural design under uncertainty.</li>
       <li><em> Computational fabrication:</em> 4D printing</li>
   </ul>
-      </p>
+      
 </body>
 </html>
