--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
     <a href="./aboutme.html">About Me</a>
   </nav>
 
-  <p> Currently, I am a research scientist at Palo Alto Research Center(a part ofSRI International). My research interests intersect computational mechanics and structural optimization.
+  <p style="font-size: 26px"> Currently, I am a research scientist at Palo Alto Research Center(a part ofSRI International). My research interests intersect computational mechanics and structural optimization.
   </p>
     <br>
   <p>My research interests are:</p>
