--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <title>About Me</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="base.css">
 </head>
 <body>
   <nav>
@@ -12,7 +12,7 @@
     <a href="./aboutme.html">About Me</a>
   </nav>
 
-  <p style="font-size: 26px"> Currently, I am a research scientist at Palo Alto Research Center(a part ofSRI International). My research interests intersect computational mechanics and structural optimization.
+  <p> Currently, I am a research scientist at Palo Alto Research Center(a part ofSRI International). My research interests intersect computational mechanics and structural optimization.
   </p>
     <br>
   <p>My research interests are:</p>
