--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </div>
   <div id="Why design matters?">
     <h2>Why design matters</h2>
-    <p style="font-size: 26px"> Design influences the way humans interact with the envinronment. A phone with smooth and rounded
+    <p> Design influences the way humans interact with the envinronment. A phone with smooth and rounded
       corners is much for comfortable to carry in our pockets than a phone with sharp corners.
     </p>
   </div>
