--- a/projects.html
+++ b/projects.html
@@ -22,6 +22,7 @@
       <li> Simulating High Cycle and Low Cycle fatigue damages</li>
        <li> Desiging resilient structures using smart materials </li>
        <li> Desiging structures made of soft materials using Neural Networks </li>
+      <li> Voxelization of CAD geometries for structural design using Topology Optimization </li>
   </ul>
       
 </body>
