--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,9 @@
       <li> Simulating High Cycle and Low Cycle fatigue damages</li>
        <li> Desiging resilient structures using smart materials </li>
        <li> Desiging structures made of soft materials using Neural Networks </li>
-      <li> Voxelization of CAD geometries for structural design using Topology Optimization </li>
+      <li> Voxelization of CAD geometries for structural design using Topology Optimization
+        <h2> Voxelization of the stanford bunny </h2>
+      </li>
   </ul>
       
 </body>
