--- a/projects.html
+++ b/projects.html
@@ -46,9 +46,9 @@
              <h2> Voxelization of CAD geometries for structural design using Topology Optimization</h2>
         <h3> Voxelization of the stanford bunny </h3>
                <p> The stanford bunny point cloud (the point cloud information can be extracted from .STL file as well)</p>
-               <img src="https://github.com/bhttchr6/futureofdesign.io/blob/master/blog/bunnyPCDpng.png" alt="Stanford Bunny PCD" />
+               <img src="./blog/bunnyPCDpng.png" alt="Stanford Bunny PCD" />
                <p> The volxelized version of stanford bunny </p>
-               <img src="https://github.com/bhttchr6/futureofdesign.io/blob/master/blog/bunnyVOXELpng.png" alt="Stanford Bunny Voxelized" />
+               <img src="./blog/bunnyVOXELpng.png" alt="Stanford Bunny Voxelized" />
              </div>
      
  
