--- a/index_2.html
+++ b/index_2.html
@@ -1,37 +1,19 @@
----
-layout: default
-title: Anurag Bhatatcharyya, PhD Candidate
----
-<div class="blurb">
-	<img src="Bhattacharyya.asp.jpg" style="width:140px; height:140px; object-fit: cover;">
-	<h1>Hello! I am Anurag Bhattacharyya</h1>
-	<p>I am a PhD candidate at the University of Illinois Urbana-Champaign. I am interested in computational mechanics focussed on topology optimization <a href="CV_AnuragB.pdf">Here is my CV</a></p>
-</div><!-- /.blurb -->
-<nav>
-							<!-- This element makes an "Unordered List" -->
-							<ul>
-								<!-- This is a "List Item" -->
-								<li>
-									<!-- 	Note that this links to #about, which will move the page to wherever
-										the element with the id "about" exists.
-									-->
-									<a href="https://publish.illinois.edu/designlab/">About Me</a>
-								</li>
-								<li>
-									<a href="https://scholar.google.com/citations?user=bCATqIIAAAAJ&hl=en">Research</a>
-								</li>
-								<li>
-									<a href="_posts/2020-05-04-Anurag-Bhattacharyya-site-launched.md">Community</a>
-								</li>
-								<li>
-									<a href="#contact">Contact</a>
-								</li>
-								<!-- 	You can add another button to your navigation menu by adding
-									another List Item with a link inside of it.
-								-->
-								<li><a href="/blog">Blog</a></li>
-								<!-- <li>
-									<a href="images/Astronomy.jpg">My CV</a>
-								</li> -->
-							</ul>
-						</nav>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>A simple Three.JS App</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header>
+      <h1>A simple three.js app</h1>
+    </header>
+
+    <main>
+      <div id="container3D"></div>
+    </main>
+
+    <script type="module" src="js/main.js"></script>
+  </body>
+</html>
