--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
       <div id="container3D"></div>
     </main>
 
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/client.js"></script>
   </body>
 </html>
