--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
     <header>
       <h1> 3D Model Viewer App</h1>
     </header>
-
+    
     <main>
       <div id="container3D"></div>
     </main>
 
     <script type="module" src="js/client.js"></script>
+
+    <nav>
+      
+      <a href="./projects.html"> Convert .STL to Voxel </a>
+    </nav>
+
   </body>
 </html>
