--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div id="container3D"></div>
     </main>
 
-    <script type="module" src="js/client.js"></script>
+    <script type="module" src="js/main.js"></script>
 
     <nav>
       
