--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <nav>
       
-      <a href="./projects.html"> Convert .STL to Voxel </a>
+     <! <a href="./projects.html"> Convert .STL to Voxel </a> >
     </nav>
 
   </body>
