--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
     <nav>
       
-     <a href="./projects.html"> More cool stuffs </a> 
+     <a href="./projects.html"> Knot </a>
+     <a href="./headrest.html"> Headrest </a>
     </nav>
 
   </body>
